# dok-alalai

./: .gitignore  CHANGELOG.md  LICENSE  README.md  config.env.example  docker-compose.dev.yml  main.py  pyproject.toml
services/webapp/: README.md  dev.Dockerfile  pyproject.toml  start-dev.sh
services/webapp/app/: main.py
services/webapp/app/core/: assessment.py  config.py  image.py  llm.py
services/webapp/app/models/: __init__.py  base.py  client.py  requests.py  responses.py
services/webapp/app/routers/: __init__.py  assessment.py  client.py  feedback.py  frontend.py
services/webapp/app/static/js/: core.js
services/webapp/app/static/js/pages/: assessinfo.js  assesslist.js  clientadd.js  clientassess.js  clientinfo.js  clientlist.js  feedbackinfo.js  feedbacklist.js
services/webapp/app/templates/: base.html
services/webapp/app/templates/components/: assess-feedback-list.html  client-assess-form.html  client-assess-list.html  client-form.html  client-quick-info-form.html  footer.html  menu.html
services/webapp/app/templates/pages/: assess-info.html  assess-list.html  client-add.html  client-assess-info.html  client-info.html  client-list.html  feedback-info.html  feedback-list.html  index.html
services/webapp/migrations/: env.py
services/webapp/migrations/versions/: 297ac4f87b47_create_initial_tables.py  3c17feb44576_adde_generate_duration_field_to_.py
